Changes for 1.2.2

* Fix bug (2947241) combined land/amphib blitz with associated sea battle throws exception (ComradeKev)
 
* Add additional unit png files to most base/images/units folders (ComradeKev)

* Fix bug (2945150) 'Neutrals Are Impassable' only valid for aircraft (ComradeKev)

* Fix bug (2943002) AA firing rules with and without low luck (ComradeKev)

* Fix bug (294300) Victory Conditions tweaked (ComradeKev)

* Check 'Allied Air Dependents' property to see if allied air can participate in attack (ComradeKev)

* Fix bug (2936271) Bombers allowed to continue to more battles after dropping (blitzing) paratroops (ComradeKev)
 
* Fix bug (2939602) Allied fighters on attacking carriers (ComradeKev)

* Fix bug (2939915) by tweaking route finding logic (ComradeKev)

* Fix bug (2938275) AA on trns firing at passing aircraft (ComradeKev)

* Change 'No Economic Victory' game property to 'Economic Victory' (ComradeKev)

* Fix displayed Victory City victory message (ComradeKev)

* Fix null pointer if trying to select factory in edit mode (ComradeKev)

* Update NWO map to version 1.7.2 (OnanTheBrBr)

* Fix bug (2933998) null pointer in MoreNAble IA Non Combat movement through sea zones (ComradeKev)

* Fix bug (2933797) Battle Calc in Edit Mode- removed unnecessary checks for edit mode (ComradeKev)

* Allow submersible subs to travel under enemy ships in combat and non-combat (except DDs) (ComradeKev)

* Update options panel height to 15 items to fit on smaller screens (ComradeKev)

* Fix bug (2933341) Exception if paratroop transport cost > bomber capacity (ComradeKev)
 
* Fix bug (2932947) paratroop checking code allowing naval ships to move through enemy SZ (ComradeKev)

Changes for 1.2.1

* Update game icons (ubernaut)

* Fix subs being able to move through enemy fleets in noncombat for WW2v2 (ComradeKev)

* Fix broken code around pacific test cases for new properties (ComradeKev)
